airflow-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      containers:
        - name: airflow-scheduler
          image: puckel/docker-airflow:1.10.9
          args: ["scheduler"]
          volumeMounts:
            - name: logs-volume
              mountPath: /usr/local/airflow/logs
            - name: requirements-volume
              mountPath: /requirements
            - name: dags-volume
              mountPath: /usr/local/airflow/dags
      volumes:
        - name: logs-volume
          persistentVolumeClaim:
            claimName: test-pvc-4
        - name: requirements-volume
          configMap:
            name: requirements-configmap
        - name: dags-volume
          persistentVolumeClaim:
            claimName: test-pvc-4
