airflow-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  labels:
    app: airflow-webserver
spec:
  selector:
    matchLabels:
      app: airflow-webserver
  replicas: 1
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      containers:
      - name: airflow-webserver
        image: puckel/docker-airflow:1.10.9
   # This is the maximum CPU the pod can use
        ports:
          - containerPort: 8080         
        volumeMounts:
          - name: requirements-configmap
            subPath: "requirements.txt"
            mountPath: "/requirements.txt"
      volumes:
      - name: requirements-configmap
        configMap:
          name: requirements-configmap
