spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master-deployment
  namespace: default  # Change if you are using a different namespace
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: spark-master
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      containers:
      - name: spark
        image: bitnami/spark:3.5.0
        ports:
        - containerPort: 8080  # Spark default port
