spark-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker-deployment
  namespace: default  # Change if you are using a different namespace
spec:
  replicas: 1  # Adjust the number of worker replicas based on your cluster size
  selector:
    matchLabels:
      app: spark-worker
  template:
    metadata:
      labels:
        app: spark-worker
    spec:
      containers:
      - name: spark-worker
        image: bitnami/spark:3.5.0
        ports:
        - containerPort: 8081  # Default worker web UI port
