airflow-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-web
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  selector:
    app: airflow
