spark-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: default # Specify your namespace
  labels:
    app: spark
    role: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
      role: master
  template:
    metadata:
      labels:
        app: spark
        role: master
    spec:
      containers:
      - name: spark-master
        image: bitnami/spark:latest
        ports:
        - containerPort: 7077   # Spark master port
        - containerPort: 8080   # Spark UI port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  namespace: default # Specify your namespace
  labels:
    app: spark
    role: worker
spec:
  replicas: 1  # Number of Spark workers
  selector:
    matchLabels:
      app: spark
      role: worker
  template:
    metadata:
      labels:
        app: spark
        role: worker
    spec:
      containers:
      - name: spark-worker
        image: bitnami/spark:latest
        ports:
        - containerPort: 8081  # Spark Worker UI port
---
apiVersion: v1
kind: Service
metadata:
  name: spark-master-svc
  namespace: default # Specify your namespace
spec:
  type: ClusterIP
  ports:
  - name: spark-master
    port: 7077
    targetPort: 7077
  - name: spark-console
    port: 8080
    targetPort: 8080
  selector:
    app: spark
    role: master
---
apiVersion: v1
kind: Service
metadata:
  name: spark-worker-svc
  namespace: default # Specify your namespace
spec:
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: spark
    role: worker
