spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master-service
  namespace: default  # Change if you are using a different namespace
spec:
  selector:
    app: spark-master
  ports:
    - name: spark
      protocol: TCP
      port: 7077
      targetPort: 7077
    - name: ui
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
