ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-spark-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 4.209.28.158
    http:
      paths:
      - path: /spark
        pathType: Prefix
        backend:
          service:
            name: spark-master
            port:
              number: 8080
